Attempt to change icons from Lucide to FontAwesome.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<title>Bento</title>
 		<link rel=" shortcut icon" type="image/png" href="assets/icons/favicon.png" />
 		<link rel="stylesheet" href="app.css" />
-		<script src="https://unpkg.com/lucide@latest"></script>
+		<script src="https://kit.fontawesome.com/9bff6214c3.js" crossorigin="anonymous"></script>
 	</head>
 
 	<!-- 
@@ -16,7 +16,7 @@
 
 	<body class="">
 		<button id="themeButton">
-			<i id="themeIcon" icon-name="moon"></i>
+			<i id="themeIcon" icon-name="fa-regular fa-moon"></i>
 		</button>
 		<div class="container">
 			<!-- Clock and Greetings  -->
