--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<title>Bento</title>
 		<link rel=" shortcut icon" type="image/png" href="assets/icons/favicon.png" />
 		<link rel="stylesheet" href="app.css" />
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
 		<script src="https://kit.fontawesome.com/9bff6214c3.js" crossorigin="anonymous"></script>
 	</head>
 
