--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<link rel=" shortcut icon" type="image/png" href="assets/icons/favicon.png" />
 		<link rel="stylesheet" href="app.css" />
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
+		<script src="https://unpkg.com/lucide@latest"></script>
 	</head>
 
 	<!-- 
@@ -71,6 +72,9 @@
 		<script src="assets/js/lists.js"></script>
 
 		<!-- Icons -->
+		<script>
+			lucide.createIcons();
+		</script>
 	</body>
 
 	<!-- Developed and designed by Miguel Ávila: -->
