--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 		<title>Bento</title>
 		<link rel=" shortcut icon" type="image/png" href="assets/icons/favicon.png" />
 		<link rel="stylesheet" href="app.css" />
-		<script src="https://kit.fontawesome.com/9bff6214c3.js" crossorigin="anonymous"></script>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" ></script>
 	</head>
 
 	<!-- 
@@ -72,7 +73,7 @@
 
 		<!-- Icons -->
 		<script>
-			window.FontAwesomeKitConfig();
+			window.fa{font-family:var(--fa-style-family,"Font Awesome 6 Free");
 		</script>
 	</body>
 
