--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
 		<title>Bento</title>
 		<link rel=" shortcut icon" type="image/png" href="assets/icons/favicon.png" />
 		<link rel="stylesheet" href="app.css" />
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" ></script>
+		<script src="https://kit.fontawesome.com/9bff6214c3.js" crossorigin="anonymous"></script>
 	</head>
 
 	<!-- 
@@ -17,7 +16,7 @@
 
 	<body class="">
 		<button id="themeButton">
-			<i id="themeIcon" icon-name="fa-regular fa-moon"></i>
+			<i id="themeIcon" icon-name="moon"></i>
 		</button>
 		<div class="container">
 			<!-- Clock and Greetings  -->
@@ -73,7 +72,7 @@
 
 		<!-- Icons -->
 		<script>
-			window.fa{font-family:var(--fa-style-family,"Font Awesome 6 Free");
+			window.FontAwesomeKitConfig = {"id":16846127,"version":"6.5.1","token":"9bff6214c3","method":"css","baseUrl":"https://ka-f.fontawesome.com","license":"free","asyncLoading":{"enabled":false},"autoA11y":{"enabled":true},"baseUrlKit":"https://kit.fontawesome.com","detectConflictsUntil":null,"iconUploads":{},"minify":{"enabled":true},"v4FontFaceShim":{"enabled":true},"v4shim":{"enabled":true},"v5FontFaceShim":{"enabled":true}};
 		</script>
 	</body>
 
