--- a/index.html
+++ b/index.html
@@ -74,6 +74,14 @@
 		<script>
 			window.FontAwesomeKitConfig = {"id":16846127,"version":"6.5.1","token":"9bff6214c3","method":"css","baseUrl":"https://ka-f.fontawesome.com","license":"free","asyncLoading":{"enabled":false},"autoA11y":{"enabled":true},"baseUrlKit":"https://kit.fontawesome.com","detectConflictsUntil":null,"iconUploads":{},"minify":{"enabled":true},"v4FontFaceShim":{"enabled":true},"v4shim":{"enabled":true},"v5FontFaceShim":{"enabled":true}};
 		</script>
+		<i class="fa-brands fa-discord"></i>
+                <i class="fa-brands fa-reddit-alien"></i>
+                <i class="fa-regular fa-envelope"></i>
+                <i class="fa-brands fa-pinterest"></i>
+                <i class="fa-brands fa-youtube"></i>
+                <i class="fa-solid fa-dice-d20"></i>
+                <i class="fa-solid fa-music"></i>
+                <i class="fa-solid fa-mug-hot"></i
 	</body>
 
 	<!-- Developed and designed by Miguel Ávila: -->
