--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
 		<!-- Icons -->
 		<script>
-			window.FontAwesomeKitConfig = {"id":16846127,"version":"6.5.1","token":"9bff6214c3","method":"css","baseUrl":"https://ka-f.fontawesome.com","license":"free","asyncLoading":{"enabled":false},"autoA11y":{"enabled":true},"baseUrlKit":"https://kit.fontawesome.com","detectConflictsUntil":null,"iconUploads":{},"minify":{"enabled":true},"v4FontFaceShim":{"enabled":true},"v4shim":{"enabled":true},"v5FontFaceShim":{"enabled":true}};
+			window.FontAwesomeKitConfig = {};
 		</script>
 		<i class="fa-brands fa-discord"></i>
                 <i class="fa-brands fa-reddit-alien"></i>
