--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <i class="fa-brands fa-youtube"></i>
                 <i class="fa-solid fa-dice-d20"></i>
                 <i class="fa-solid fa-music"></i>
-                <i class="fa-solid fa-mug-hot"></i
+                <i class="fa-solid fa-mug-hot"></i>
 	</body>
 
 	<!-- Developed and designed by Miguel Ávila: -->
