--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<link rel=" shortcut icon" type="image/png" href="assets/icons/favicon.png" />
 		<link rel="stylesheet" href="app.css" />
 		<script src="https://kit.fontawesome.com/9bff6214c3.js" crossorigin="anonymous"></script>
+		<script src="https://unpkg.com/lucide@latest"></script>
 	</head>
 
 	<!-- 
@@ -73,6 +74,7 @@
 		<!-- Icons -->
 		<script>
 			window.FontAwesomeKitConfig = {};
+			lucide.createIcons();
 		</script>
 	</body>
 
