--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@
       -->
 
 	<body class="">
+		<i class="fa-brands fa-discord"></i>
+<i class="fa-brands fa-reddit-alien"></i>
+<i class="fa-regular fa-envelope"></i>
+<i class="fa-brands fa-pinterest"></i>
+<i class="fa-brands fa-youtube"></i>
+<i class="fa-solid fa-dice-d20"></i>
+<i class="fa-solid fa-music"></i>
+<i class="fa-solid fa-mug-hot"></i>
 		<button id="themeButton">
 			<i id="themeIcon" icon-name="moon"></i>
 		</button>
@@ -56,6 +64,14 @@
 				<div class="linksBlockRight" id="linksBlockRight"></div>
 			</div>
 		</div>
+		<i class="fa-brands fa-discord"></i>
+<i class="fa-brands fa-reddit-alien"></i>
+<i class="fa-regular fa-envelope"></i>
+<i class="fa-brands fa-pinterest"></i>
+<i class="fa-brands fa-youtube"></i>
+<i class="fa-solid fa-dice-d20"></i>
+<i class="fa-solid fa-music"></i>
+<i class="fa-solid fa-mug-hot"></i>
 
 		<!-- Config  -->
 		<script src="config.js"></script>
