--- a/index.html
+++ b/index.html
@@ -56,6 +56,20 @@
 				<div class="linksBlockLeft" id="linksBlockLeft"></div>
 				<div class="linksBlockRight" id="linksBlockRight"></div>
 			</div>
+			
+			<!-- FontAwesome  -->
+
+			<div class="fontawesome" id="fontawesome">
+				<i class="fa-brands fa-discord"></i>
+                                <i class="fa-brands fa-reddit-alien"></i>
+                                <i class="fa-regular fa-envelope"></i>
+                                <i class="fa-brands fa-pinterest"></i>
+                                <i class="fa-brands fa-youtube"></i>
+                                <i class="fa-solid fa-dice-d20"></i>
+                                <i class="fa-solid fa-music"></i>
+                                <i class="fa-solid fa-mug-hot"></i>
+			</div>
+
 		</div>
 		
 		<!-- Config  -->
