--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 
 			<div class="fontawesome" id="fontawesome">
 				<i class="fa-brands fa-discord"></i>
+				<FontAwesomeIcon icon="fa-brands fa-discord" style={{color: "#ffffff",}} />
                                 <i class="fa-brands fa-reddit-alien"></i>
                                 <i class="fa-regular fa-envelope"></i>
                                 <i class="fa-brands fa-pinterest"></i>
